# test_py_cookie

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  new_feature.md
docs_src/: Makefile
docs_src/source/: conf.py  index.md
scripts/: replace_me.py
src/test_py_cookie/: __init__.py
tests/: test_package.py
